syntax = "proto3";
package PokerHands;

service BestHand{
   rpc Hand (HandRequest) returns (BestHandResult);
}

enum Rank {
    PADDING = 0;
    PBDDING = 1;
    TWO     = 2;
    THREE   = 3;
    FOUR    = 4;
    FIVE    = 5;
    SIX     = 6;
    SEVEN   = 7;
    EIGHT   = 8;
    NINE    = 9;
    TEN     = 10;
    JACK    = 11;
    QUEEN   = 12;
    KING    = 13;
    ACE     = 14;
}

enum Suit {
    HEARTS      = 0;
    DIAMONDS    = 1;
    CLUBS       = 2;
    SPADES      = 3;
}

message HandRequest {
    message HandCard {
    Rank rank = 1;
    Suit suit = 2;
    }
    repeated HandCard cards = 1;
}

message BestHandResult {
    enum Category {
        ROYAL_FLUSH     = 0;
        STRAIGHT_FLUSH  = 1;
        FOUR_OF_A_KIND  = 2;
        FULL_HOUSE      = 3;
        FLUSH           = 4;
        STRAIGHT        = 5;
        THREE_OF_A_KIND = 6;
        TWO_PAIR        = 7;
        ONE_PAIR        = 8;
        HIGH_CARD       = 9;
    }

    Category category = 1;

    message ResultCard {
    
        Rank rank = 1;
        Suit suit = 2;
    }

    repeated ResultCard cards = 2;
}